# typecoins-distributor

./: .flake8  main.py  mypy.ini  pyproject.toml
.github/workflows/: distribute.yaml
typecoin/: bonusly.py  main.py  network.py  openai.py  tenor.py
