[tool.poetry]
name = "typecoin-distributor"
version = "0.1.0"
description = "Give all your remaining typecoins at the end of a month."
authors = ["David Chu <david.chu@typeform.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.1.11"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
