[tool.poetry]
name = "typecoin-distributor"
version = "0.1.0"
description = "Give all your remaining typecoins at the end of a month."
authors = ["David Chu <david.chu@typeform.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
black = "*"
flake8 = "*"
flake8-bugbear = "*"
mypy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
